# obs-studio

plugins/: CMakeLists.txt
